# IZ_Kalagaeva

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c  server.h  server_lib.c  test.cpp
.github/workflows/: ci.yml
libs/array_funcs/: array_funcs.c  array_funcs.h  tests_array_funcs.cpp
libs/consistent/: search.c  search.h  test_consistent.cpp
libs/file_funcs/: file_funcs.c  file_funcs.h  test_file_funcs.cpp
libs/parallel/: search.c  search.h  small_text.txt  test_parallel.cpp
